--- a/index.html
+++ b/index.html
@@ -28,30 +28,19 @@
         .custom-scrollbar::-webkit-scrollbar-thumb:hover {
             background: #555;
         }
-        /* Animation for day transition */
+        /* Animation for day transition - simplified for stability */
         .day-schedule {
-            transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
+            transition: opacity 0.4s ease-in-out; /* Only fade for simplicity */
         }
         .day-schedule.hidden {
             opacity: 0;
-            position: absolute;
+            position: absolute; /* Keep absolute for consistent layout during transition */
             top: 0;
             left: 0;
             right: 0;
             pointer-events: none;
         }
-        .slide-from-right {
-            transform: translateX(100%);
-        }
-        .slide-to-left {
-            transform: translateX(-100%);
-        }
-        .slide-from-left {
-            transform: translateX(-100%);
-        }
-        .slide-to-right {
-            transform: translateX(100%);
-        }
+        /* No more slide classes needed with simplified transition */
 
         /* Loading spinner */
         .spinner {
@@ -869,6 +858,9 @@
             };
 
             // Add null check before attaching event listener
+            // The imageOverlay and overlayImage variables are declared at the top of DOMContentLoaded
+            // const imageOverlay = document.getElementById('image-overlay');
+            // const overlayImage = document.getElementById('overlay-image');
             if (imageOverlay) {
                 imageOverlay.addEventListener('click', () => {
                     imageOverlay.classList.add('hidden');
@@ -1050,26 +1042,69 @@
 
             // --- Render Functions ---
             function renderSchedules() {
-                scheduleContainer.innerHTML = '';
-                currentScheduleData.forEach((day, index) => {
-                    const dayDiv = document.createElement('div');
-                    dayDiv.id = `day-${index}`;
-                    dayDiv.className = 'day-schedule w-full';
-                    if (index !== currentDayIndex) {
-                        dayDiv.classList.add('hidden');
-                    }
-
-                    const subjectsHtml = day.subjects.map(subject => `
-                        <div class="flex items-center p-3 rounded-lg mb-2 ${subject.color} ${subject.textColor} shadow-sm">
-                            <span class="font-medium w-28">${subject.time}</span>
-                            <span class="font-semibold">${subject.name}</span>
-                        </div>
-                    `).join('');
-
-                    dayDiv.innerHTML = `<div class="space-y-2">${subjectsHtml}</div>`;
-                    scheduleContainer.appendChild(dayDiv);
+                // Hide all schedule divs first
+                document.querySelectorAll('.day-schedule').forEach(div => {
+                    div.classList.add('hidden');
+                    div.classList.remove('absolute'); // Ensure absolute is removed after transition if it was added
                 });
+
+                // Create and append the current day's schedule div if it doesn't exist
+                let currentDayDiv = document.getElementById(`day-${currentDayIndex}`);
+                if (!currentDayDiv) {
+                    currentDayDiv = document.createElement('div');
+                    currentDayDiv.id = `day-${currentDayIndex}`;
+                    currentDayDiv.className = 'day-schedule w-full';
+                    scheduleContainer.appendChild(currentDayDiv);
+                }
+
+                const day = currentScheduleData[currentDayIndex];
+                const subjectsHtml = day.subjects.map(subject => `
+                    <div class="flex items-center p-3 rounded-lg mb-2 ${subject.color} ${subject.textColor} shadow-sm">
+                        <span class="font-medium w-28">${subject.time}</span>
+                        <span class="font-semibold">${subject.name}</span>
+                    </div>
+                `).join('');
+
+                currentDayDiv.innerHTML = `<div class="space-y-2">${subjectsHtml}</div>`;
+                currentDayDiv.classList.remove('hidden'); // Ensure it's visible
+                currentDayDiv.classList.remove('absolute'); // Ensure it's not absolute after render
             }
+
+            function updateDisplay() {
+                dayTitle.textContent = currentScheduleData[currentDayIndex].day;
+                renderSchedules(); // Re-render the current day's schedule
+            }
+            
+            function showDay(index) {
+                currentDayIndex = (index + currentScheduleData.length) % currentScheduleData.length;
+                updateDisplay();
+            }
+
+            prevDayBtn.addEventListener('click', () => showDay(currentDayIndex - 1));
+            nextDayBtn.addEventListener('click', () => showDay(currentDayIndex + 1));
+
+            // Swipe functionality
+            let touchStartX = 0;
+            let touchEndX = 0;
+
+            scheduleContainer.addEventListener('touchstart', (e) => {
+                touchStartX = e.changedTouches[0].screenX;
+            }, { passive: true });
+
+            scheduleContainer.addEventListener('touchend', (e) => {
+                touchEndX = e.changedTouches[0].screenX;
+                handleSwipe();
+            });
+
+            function handleSwipe() {
+                if (touchEndX < touchStartX - 50) { // Swiped left
+                    showDay(currentDayIndex + 1);
+                }
+                if (touchEndX > touchStartX + 50) { // Swiped right
+                    showDay(currentDayIndex - 1);
+                }
+            }
+
 
             function renderPRs() {
                 prList.innerHTML = ''; 
@@ -1201,6 +1236,7 @@
                                 <span class="text-white text-lg font-bold">${photo.likes.length} ❤️</span>
                             </div>
                         `;
+                        // Pass isCurrentUser to showPhotoDetail to control like/comment button visibility
                         imgDiv.addEventListener('click', () => showPhotoDetail(photo, isCurrentUser));
                         container.appendChild(imgDiv);
                     });
@@ -1706,25 +1742,30 @@
             // --- Photo Detail Modal (Likes & Comments) ---
             function showPhotoDetail(photo, isCurrentUser) {
                 currentViewedPhotoId = photo.id;
-                currentViewedPhotoUserId = isCurrentUser ? userId : photo.userId; // Store user ID of the photo owner
+                currentViewedPhotoUserId = photo.userId || (isCurrentUser ? userId : null); // Ensure userId is set for owner
                 detailPhotoImg.src = photo.url;
                 updateLikesAndCommentsUI(photo.likes, photo.comments);
                 
-                // Show/hide like button based on login status and if it's not current user's photo
-                if (userId && !isCurrentUser) {
-                    likeBtn.classList.remove('hidden');
-                    // Check if current user already liked this photo
-                    if (photo.likes.includes(userId)) {
-                        likeBtn.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-1" viewBox="0 0 24 24" fill="currentColor" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M14 10h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21H3a1 1 0 01-1-1V9a1 1 0 011-1h1.586a1 1 0 00.707-.293l3.414-3.414A1 1 0 019.586 3H12a2 2 0 012 2v1h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21H3a1 1 0 01-1-1V9a1 1 0 011-1h1.586a1 1 0 00.707-.293l3.414-3.414A1 1 0 019.586 3H12a2 2 0 012 2v1z" /></svg><span id="like-count">${photo.likes.length}</span>`;
-                        likeBtn.classList.add('text-red-500'); // Indicate liked
-                    } else {
-                        likeBtn.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M14 10h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21H3a1 1 0 01-1-1V9a1 1 0 011-1h1.586a1 1 0 00.707-.293l3.414-3.414A1 1 0 019.586 3H12a2 2 0 012 2v1h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21H3a1 1 0 01-1-1V9a1 1 0 011-1h1.586a1 1 0 00.707-.293l3.414-3.414A1 1 0 019.586 3H12a2 2 0 012 2v1z" /></svg><span id="like-count">${photo.likes.length}</span>`;
-                        likeBtn.classList.remove('text-red-500');
+                // Show/hide like button and comment form based on login status and ownership
+                if (userId) { // If logged in
+                    if (isCurrentUser) { // If it's the current user's photo
+                        likeBtn.classList.add('hidden'); // Cannot like your own photo
+                        commentForm.classList.remove('hidden'); // Can comment on your own photo
+                    } else { // If it's another user's photo
+                        likeBtn.classList.remove('hidden');
+                        commentForm.classList.remove('hidden');
+                        // Check if current user already liked this photo
+                        if (photo.likes.includes(userId)) {
+                            likeBtn.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-1" viewBox="0 0 24 24" fill="currentColor" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M14 10h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21H3a1 1 0 01-1-1V9a1 1 0 011-1h1.586a1 1 0 00.707-.293l3.414-3.414A1 1 0 019.586 3H12a2 2 0 012 2v1h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21H3a1 1 0 01-1-1V9a1 1 0 011-1h1.586a1 1 0 00.707-.293l3.414-3.414A1 1 0 019.586 3H12a2 2 0 012 2v1z" /></svg><span id="like-count">${photo.likes.length}</span>`;
+                            likeBtn.classList.add('text-red-500'); // Indicate liked
+                        } else {
+                            likeBtn.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M14 10h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21H3a1 1 0 01-1-1V9a1 1 0 011-1h1.586a1 1 0 00.707-.293l3.414-3.414A1 1 0 019.586 3H12a2 2 0 012 2v1h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21H3a1 1 0 01-1-1V9a1 1 0 011-1h1.586a1 1 0 00.707-.293l3.414-3.414A1 1 0 019.586 3H12a2 2 0 012 2v1z" /></svg><span id="like-count">${photo.likes.length}</span>`;
+                            likeBtn.classList.remove('text-red-500');
+                        }
                     }
-                    commentForm.classList.remove('hidden'); // Allow comments if logged in and not own photo
-                } else {
+                } else { // If not logged in
                     likeBtn.classList.add('hidden');
-                    commentForm.classList.add('hidden'); // Hide comment form if not logged in or own photo
+                    commentForm.classList.add('hidden');
                 }
 
                 photoDetailModal.classList.remove('hidden');
@@ -1768,7 +1809,8 @@
                     const photoIndex = photos.findIndex(p => p.id === currentViewedPhotoId);
 
                     if (photoIndex !== -1) {
-                        let updatedLikes = [...photos[photoIndex].likes];
+                        let updatedPhotos = [...photos]; // Create a mutable copy
+                        let updatedLikes = [...updatedPhotos[photoIndex].likes];
                         if (updatedLikes.includes(userId)) {
                             // Unlike
                             updatedLikes = updatedLikes.filter(id => id !== userId);
@@ -1776,11 +1818,11 @@
                             // Like
                             updatedLikes.push(userId);
                         }
+                        updatedPhotos[photoIndex].likes = updatedLikes; // Update the likes array in the copy
 
-                        // Update the specific photo's likes array within the photos array
-                        photos[photoIndex].likes = updatedLikes;
-                        await updateDoc(userProfileDocRef, { photos: photos });
-                        updateLikesAndCommentsUI(updatedLikes, photos[photoIndex].comments); // Update UI
+                        // Update the entire photos array in Firestore
+                        await updateDoc(userProfileDocRef, { photos: updatedPhotos });
+                        updateLikesAndCommentsUI(updatedLikes, updatedPhotos[photoIndex].comments); // Update UI
                         console.log(`Photo ${currentViewedPhotoId} likes updated.`);
                     }
                 }
@@ -1798,16 +1840,20 @@
                     const photoIndex = photos.findIndex(p => p.id === currentViewedPhotoId);
 
                     if (photoIndex !== -1) {
+                        let updatedPhotos = [...photos]; // Create a mutable copy
                         const newComment = {
                             userId: userId,
                             userName: currentUserProfile ? currentUserProfile.name || currentUserProfile.email.split('@')[0] : 'Anonim',
                             text: commentInput.value.trim(),
                             timestamp: Date.now()
                         };
-                        // Update the specific photo's comments array within the photos array
-                        photos[photoIndex].comments = arrayUnion(newComment); // Use arrayUnion to add comment
-                        await updateDoc(userProfileDocRef, { photos: photos });
-                        updateLikesAndCommentsUI(photos[photoIndex].likes, photos[photoIndex].comments); // Update UI
+                        // Ensure comments array exists
+                        updatedPhotos[photoIndex].comments = updatedPhotos[photoIndex].comments || [];
+                        updatedPhotos[photoIndex].comments.push(newComment); // Add new comment to the copy
+
+                        // Update the entire photos array in Firestore
+                        await updateDoc(userProfileDocRef, { photos: updatedPhotos });
+                        updateLikesAndCommentsUI(updatedPhotos[photoIndex].likes, updatedPhotos[photoIndex].comments); // Update UI
                         commentInput.value = ''; // Clear input
                         console.log(`Comment added to photo ${currentViewedPhotoId}.`);
                     }
